@@ -1,3 +1,8 @@
+Thu Feb 15 06:00:12 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
+
+	* File_Manager.cpp: Fixed "unreachable code" errors reported by
+	  Compaq C++.
+
 Thu Nov 16 17:58:10 2000  Carlos O'Ryan  <coryan@uci.edu>
 
         * Options.h:
